Remove id lookup from TestSupport